--- a/index.html
+++ b/index.html
@@ -26,31 +26,27 @@
 <div
   class="relative flex min-h-screen flex-col justify-center overflow-hidden bg-gradient-to-r from-yellow-200 to-yellow-5000">
   <div
-    class="relative px-6 py-6 shadow-xl ring-1 ring-gray-900/5 mx-auto max-w-md  min-h-screen bg-stone-50">
-    <main class="mx-auto max-w-md leading-7 ">
+    class="relative w-full sm:max-w-sm shadow-xl ring-1 ring-gray-900/5 mx-auto  min-h-screen bg-stone-50">
+    <div class="mx-auto  leading-7">
       <div class="space-y-6 text-base text-gray-600">
         <div class="flex justify-between items-center">
-          <h1 class="text-4xl font-bold">Mobile Site</h1>
-          <a class="" href="https://github.com/ttsukasan/mobile-site-202310">
+          <h1 class="text-4xl font-bold">Fruit Dump</h1>
+          <a class="" href="https://github.com/ttsukasan/fruit-dump">
             <img class="w-8" src="https://unpkg.com/simple-icons@v9/icons/github.svg" alt="github"/>
           </a>
         </div>
-        <p>ここに文字が入ります</p>
-        <p>ここに文字が入ります</p>
-        <p>ここに文字が入ります</p>
-        <p>ここに文字が入ります</p>
-        <p>ここに文字が入ります</p>
+        <p class="w-96">ここにテキストが入ります</p>
       </div>
-
-      <div class="text-center">
-        <img src="img/shark.png" alt="logo" class="w-96">
-      </div>
-    </main>
+    </div>
+    <div id="game-wrapper" class="mx-auto l">
+      <div id="game"></div>
+    </div>
   </div>
 </div>
 <script type="module" src="js/vendor/modernizr-3.11.2.min.js"></script>
 <script type="module" src="js/plugins.js"></script>
 <script type="module" src="js/main.js"></script>
+<script type="module" src="js/game.ts"></script>
 
 <!--<script>-->
 <!--  window.ga = function () {-->
