puzzle表示まで出来たけどまだ動かない https://github.com/photonstorm/phaser-examples/blob/master/examples/games/sliding%20puzzle.js

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <div class="mx-auto  leading-7">
       <div class="space-y-6 text-base text-gray-600">
         <div class="flex justify-between items-center">
-          <h1 class="text-4xl font-bold">Fruit Dump</h1>
-          <a class="" href="https://github.com/ttsukasan/fruit-dump">
+          <h1 class="text-4xl font-bold">kpuzzle</h1>
+          <a class="" href="https://github.com/ttsukasan/kpuzzle">
             <img class="w-8" src="https://unpkg.com/simple-icons@v9/icons/github.svg" alt="github"/>
           </a>
         </div>
